Adding acount Repository

--- a/E-commerce/appsettings.json
+++ b/E-commerce/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "con": "Data Source=.;Initial Catalog=E-commerce;Integrated Security=True;Encrypt=False"
+  },
+
+  "Jwt": {
+    "SecretKey": "welcome to my secret key yousef farouk",
+    "Issuer": "your_issuer",
+    "Audience": "your_audience"
   }
 }
